fix: prevent double-tap zoom on mobile when adding multiple points

--- a/style.sass
+++ b/style.sass
@@ -1,6 +1,9 @@
 *
   font-family: Helvetica, sans-serif
 
+html, body
+  touch-action: manipulation
+
 body
   background-color: #252525
   margin: 50px
